<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">肤君美容护肤神器</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="mybag_price">暂无报价</string>
    <string name="location_back">返回</string>
    <string name="home_title">肤君</string>
    <string name="task_info_today">今日完成</string>
    <string name="task_info_history">历史</string>
    <string name="task_info_setting">设置</string>
    <string name="task_info_delete">取消计划</string>
    <string name="task_info_open">开启提醒</string>
    <string name="task_info_settime">时间设置</string>
    <string name="me_have_plan">我要更多美丽计划</string>
    <string name="home_wintask">已完成该计划</string>
    <string name="home_losttask">该计划已被忽略</string>
    <string name="exit_hint">再按一次退出</string>
    <string name="beauty_experience">美妆心得</string>
    <string name="beauty_rating">美妆榜单</string>
    <string name="home_jijijij">每一个新的一天都是一个改变你自己命运的机会</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_footer_hint_normal">加载更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="click">点击进入</string>
    <string name="space"></string>
    <string name="search_detalis_price">价格</string>
    <string name="search_detalis_classify">分类</string>
    <string name="search_search">搜索</string>
    <string name="product_product">妆品库</string>
    <string name="serach_rack">搜妆品，心得，资讯</string>
    <string name="cancle_cancle">取消</string>
    <string name="search_result">搜索结果页</string>
    <string name="setting_remind_yes">接收新通知提醒</string>
    <string name="setting_setting_sound">声音</string>
    <string name="setting_setting_shake">震动</string>
    <string name="setting_setting">我的</string>
    <string name="setting_back">返回</string>
    <string name="setting_update">版本更新</string>
    <string name="setting_advice">意见反馈</string>
    <string name="setting_advice_hint">吐槽产品或提意见</string>
    <string name="setting_contact_hint">联系方式(选填,邮箱或联系电话)</string>
    <string name="setting_advice_commit">发送</string>
    <string name="setting_version_code">当前版本：</string>
    <string name="setting_login_message">未登录</string>
    <string name="setting_new">NEW</string>
    <string name="setting_update_password">修改密码</string>
    <string name="setting_update_message">更改信息</string>
    <string name="fragment_setting_message">编辑资料</string>
    <string name="setting_input_pass_name">密码或账号错误</string>
    <string name="setting_input_name">用户名不能为空</string>
    <string name="setting_input_pass">密码不能为空</string>
    <string name="setting_clear">清理缓存</string>
    <string name="setting_remind">提醒设置</string>
    <string name="quit_login">退出登录</string>
    <string name="quit_login_success">退出成功</string>
    <string name="about_about">关于肤君</string>
    <string name="login_login">登录</string>
    <string name="setting_success">缓存清理成功</string>
    <string name="setting_edit_send">保存</string>
    <string name="setting_edit_image">头像</string>
    <string name="setting_edit_name">昵称</string>
    <string name="setting_edit_gender">性别</string>
    <string name="setting_edit_day">生日</string>
    <string name="beautiful_beautiful">美丽计划</string>
    <string name="more_updata">软件升级</string>
    <string name="more_version_info">版本信息:</string>
    <string name="more_updata_load">立即升级</string>
    <string name="more_updata_error">升级失败</string>
    <string name="more_updata_lvlv">升级失败，请稍候再试</string>
    <string name="more_updata_exit">稍后再说</string>
    <string name="setting_sex">女</string>
    <string name="task_gain_plan">获取计划信息失败</string>
    <string name="more_more_current">已是最新版本</string>
    <string name="intent_no">亲爱哒你现在木有网吖</string>
    <string name="intent_error">网络异常，不要捉急，休息一下再试</string>
    <string name="more_logout_intent">退出失败</string>
    <string name="setting_pelease_login">请</string>
    <string name="setting_have_loain">已登陆</string>
    <string name="setting_bag">我的化妆包</string>
    <string name="setting_fav_bag">我长草的化妆品</string>
    <string name="setting_beauty_comments">我的美妆心得</string>
    <string name="setting_beauty_task">我的美丽计划</string>
    <string name="advice_suggestions">意见反馈</string>
    <string name="advice_customer_submit">确定提交</string>
    <string name="advice_suggestions_content">亲，对产品有什么改进建议，欢迎告诉我们</string>
    <string name="advice_phone_number">您的联系方式：</string>
    <string name="activity_composition_header_view_include">含有该成分的产品</string>
    <string name="activity_composition_none_text">暂时为收录......</string>
    <string name="search_label">xxxs</string>
    <string name="task_brief_todayfinish">今日完成情况</string>
    <string name="plan_detalis_reding"> 相关阅读</string>
    <string name="plan_detalis_prodact"> 相关产品</string>
    <string name="updata_message_cram">请选择相机或者图库</string>
    <string name="updata_message_cramone">相机</string>
    <string name="updata_message_pict">图库</string>
    <string name="updata_message_nosucc">修改信息失败</string>
    <string name="activiry_composition_take_photo_error">图片保存失败，请重新尝试拍照</string>
    <string name="updata_message_success">信息修改成功</string>
    <string name="plan_have">已经参加</string>
    <string name="new_product_valuating">新品评测</string>
    <string name="new_product_option">优选</string>
    <string name="write_nonice_image">不能超过9张图片</string>
    <string name="aenior_nonice_image">不能超过3张图片</string>
    <string name="user_name">用户名</string>
    <string name="user_pass">密码</string>
    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="user_qq">QQ登录</string>
    <string name="user_wei">微信登录</string>
    <string name="user_sina">微博登录</string>
    <string name="home_popupwindow_shake">忽略</string>
    <string name="home_popupwindow_success">完成</string>
    <string name="home_popupwindow_setting">设置</string>
    <string name="course_class">彩妆课堂</string>
    <string name="e">完成</string>
    <string name="home_popxzczcupwindow_setting">设置</string>
    <string name="home_plan_elide">忽略</string>
    <string name="detalis_detalis">肤君</string>
    <string name="home_detalis_t1">美丽指数</string>
    <string name="home_detalis_t3">分</string>
    <string name="moisturize_to">每日一文</string>
    <string name="moisturize_product">详情</string>
    <string name="home_button_title">肤君</string>
    <string name="home_button_course">妆品库</string>
    <string name="home_button_read">教程</string>
    <string name="home_button_task">计划</string>
    <string name="home_button_try">我的试用</string>
    <string name="home_button_more">我的</string>
    <string name="plan_detalis_addtask">参加计划</string>
    <string name="about_law_statement">免责声明</string>
    <string name="about_detail_introduce">详细介绍</string>
    <string name="about_law_item_one">第一条</string>
    <string name="about_law_item_two">第二条</string>
    <string name="about_law_item_three">第三条</string>
    <string name="about_law_item_four">第四条</string>
    <string name="about_law_title">用户在接受肤君APP服务之前，请务必仔细阅读本条款并同意本声明。</string>
    <string name="about_law_one_content">任何通过肤君跳转链接到的第三方页面均为他人制作或提供，您可以从该第三方页面上获得资讯及享用服务，肤君对其合法性概不负责，亦不承担任何法律责任。</string>
    <string name="about_law_two_content">产品成分与功效均来源于产品检验报告，以及成分说明。如您对肤君所提供的成分说明有任何异议，可邮件至肤君官方邮箱。
fujun@yoka.com</string>
    <string name="about_law_three_content">用户以各种方式使用肤君服务和数据（包括但不限于发表、宣传介绍、转载、浏览及利用附近或肤君用户发布内容）的过程中，不得以任何方式利用肤君直接或间接从事违反中国法律、以及社会公德的行为。</string>
    <string name="about_law_four_content">用户直接或通过各类方式（如站外API引用等）间接使用肤君服务和数据的行为，都将被视作已无条件接受本声明所涉全部内容；若用户对本声明的任何条款有异议，请停止使用肤君所提供的全部服务。</string>
    <string name="about_law_end">对免责声明的解释、修改及更新权均属于肤君APP所有。</string>
    <string name="setting_about_text">肤君，陪你每一天美一点\n 追潮流：前沿美妆资讯带你看 \n 抢试用：海量时髦新品疯狂试 \n 圈美粉：权威美妆达人陪你玩转美妆 \n</string>
    <string name="beautiful_subtitle">已添加的美丽计划</string>
    <string name="addbeautiful_addbeautiful">添加美丽计划</string>
    <string name="beautiful_task_listing_addimage">添加成功了</string>
    <string name="beautiful_task_add_renew">恢复默认</string>
    <string name="task_title">计划</string>
    <string name="task_title_day">今日计划</string>
    <string name="add_task">添加计划</string>
    <string name="setting_add_task">我的计划</string>
    <string name="setting_plan_detalis">时间表</string>
    <string name="setting_plan_seedetalis">查看详情</string>
    <string name="setting_plan_detaliss">计划详情</string>
    <string name="remove_task">取消计划</string>
    <string name="add_taskback">返回</string>
    <string name="task_cancelled">取消参加</string>
    <string name="task_finished">已完成</string>
    <string name="task_undergoing">待完成</string>
    <string name="task_fail">未完成</string>
    <string name="task_day">天</string>
    <string name="task_sun">共</string>
    <string name="task_experience">经历</string>
    <string name="task_everyday">每天</string>
    <string name="task_order">次的小计划</string>
    <string name="task_order_c">次</string>
    <string name="task_have">已有</string>
    <string name="task_beautiful_mon">位美女参加</string>
    <string name="task_beautiful_numdesc">美女已参加该计划</string>
    <string name="task_surplus">还剩</string>
    <string name="task_aggregate">计划总进度</string>
    <string name="task_brief_text">计划明细（添加后可设置提醒时间）</string>
    <string name="taskbrief_taskbrief">计划简介</string>
    <string name="task_finish">计划完成度</string>
    <string name="task_everydayhave">每天1次</string>
    <string name="add_task_c">参加</string>
    <string name="add_today_have">今天还有</string>
    <string name="add_today_taskgo">个计划,加油</string>
    <string name="task_d">第</string>
    <string name="task_today_success">今天已完成</string>
    <string name="task_nape">项</string>
    <string name="task_add_sucess">添加计划成功</string>
    <string name="task_add_planfaile">取消计划成功</string>
    <string name="task_add_succc">计划已经添加</string>
    <string name="task_remove_sucess">计划添加成功</string>
    <string name="task_weizhi">位</string>
    <string name="task_loading">加载中.......</string>
    <string name="task_plan">我的计划</string>
    <string name="task_onaddtask">怎么可以没计划？快点这里添加！</string>
    <string name="task_synchroniznonono">计划同步失败，请重新登录。</string>
    <string name="task_detalis_add">计划已经添加</string>
    <string name="task_no_task">没有更多数据了</string>
    <string name="beautiful_topic_one">在变美的路上默默耕耘…[GO!]</string>
    <string name="beautiful_topic_two">已经没人能阻挡你变美了，加油哇</string>
    <string name="beautiful_topic_three">天了噜，颜值又升高了呢</string>
    <string name="beautiful_topic_four">天了噜，颜值又又升高了呢</string>
    <string name="beautiful_topic_five">你已经打败全国99%的懒女人，女神就要诞生啦</string>
    <string name="beautiful_topic_six">已经美到没天理 快让你身边小伙伴来膜拜你</string>
    <string name="product_detalis_product_detalis">产品详情</string>
    <string name="product_detalis_product_xin">心得详情</string>
    <string name="course_detalis">护肤课堂</string>
    <string name="product_comment_product_comment">评论</string>
    <string name="share_share">分享</string>
    <string name="feelings_feelings">心得体会</string>
    <string name="product_more_button">查看更多成分</string>
    <string name="probation_filter">筛选</string>
    <string name="probation_filter_all">全部</string>
    <string name="probation_filter_success">申请成功</string>
    <string name="probation_filter_ing">正在审核</string>
    <string name="probation_filter_failed">申请失败</string>
    <string name="write_addtext_image">添加图片</string>
    <string name="write_photo">照片</string>
    <string name="write_photograph">拍照</string>
    <string name="edittext_edittext">编辑文本</string>
    <string name="bodytext_bodytext">正文文字</string>
    <string name="update_phone_save">保存</string>
    <string name="update_email_title">填写邮箱</string>
    <string name="update_email_email">邮箱</string>
    <string name="update_email_hint">填写邮箱</string>
</resources>