<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EEEEEE"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/probation_filter"
            android:textColor="#828282"
            android:textSize="@dimen/text16" />

        <ImageView
            android:id="@+id/probation_filter_dialog_close"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:visibility="gone"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#dedede" />

        <TextView
            android:id="@+id/probation_filter_dialog_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/probation_filter_all"
            android:textColor="#828282"
            android:textSize="@dimen/text16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#dedede" />

        <TextView
            android:id="@+id/probation_filter_dialog_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/probation_filter_success"
            android:textColor="#828282"
            android:textSize="@dimen/text16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#dedede" />

        <TextView
            android:id="@+id/probation_filter_dialog_ing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/probation_filter_ing"
            android:textColor="#828282"
            android:textSize="@dimen/text16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#dedede" />

        <TextView
            android:id="@+id/probation_filter_dialog_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/probation_filter_failed"
            android:textColor="#828282"
            android:textSize="@dimen/text16" />
    </LinearLayout>

</LinearLayout>