<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/popupwindow_big_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/popupwindow_cancle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_rec_big"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/write_addtext_image"
            android:textColor="@color/gray"
            android:textSize="@dimen/text14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/popupwindow_image"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/write_photo"
            android:textColor="@color/bule"
            android:textSize="@dimen/text14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/popupwindow_photograph"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/write_photograph"
            android:textColor="@color/bule"
            android:textSize="@dimen/text14" />
    </LinearLayout>

    <TextView
        android:id="@+id/popupwindow_cancle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_rec_small"
        android:gravity="center"
        android:text="@string/cancle_cancle"
        android:textColor="@color/bule"
        android:textSize="@dimen/text14" />

</RelativeLayout>