<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- 标题 -->

    <RelativeLayout
        android:id="@+id/write_text_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:id="@+id/write_text_layout_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/write_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/blck_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/location_back"
                android:textColor="@color/location_city_gps"
                android:textSize="@dimen/text12" />
        </LinearLayout>

        <TextView
            android:id="@+id/write_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edittext_edittext"
            android:textColor="@color/black"
            android:textSize="@dimen/text18" />

        <TextView
            android:id="@+id/write_text_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/e"
            android:textColor="@color/black" />
    </RelativeLayout>
<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/head_view_color" />
    <EditText
        android:id="@+id/write_text_write"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:gravity="top|left"
        android:hint="@string/bodytext_bodytext"
        android:imeOptions="actionSearch"
        android:maxLines="15"
        android:scrollbars="vertical" />

</LinearLayout>