<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFEF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white" >

        <!--
             <ImageView
            android:id="@+id/update_email_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@null"
            android:src="@drawable/blck_back" />
        -->

        <LinearLayout
            android:id="@+id/update_email_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/blck_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/location_back"
                android:textColor="@color/location_city_gps"
                android:textSize="@dimen/text12" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update_email_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text18" />

        <TextView
            android:id="@+id/update_email_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/update_phone_save"
            android:textColor="#dedede"
            android:textSize="@dimen/text16" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0EFEF" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F0EFEF" />

    <LinearLayout
        android:id="@+id/update_email_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:text="@string/update_email_email"
            android:textColor="@color/black"
            android:textSize="@dimen/text16" />

        <EditText
            android:id="@+id/update_email_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/update_email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textColorHint="@color/update_edit_hint_color" />
    </LinearLayout>

</LinearLayout>