<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/brief_task_bigimage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <!--
             <ImageView
            android:id="@+id/brief_task_backimage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_launcher"
            tools:ignore="ContentDescription" />
        -->

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/task_beautiful_mon"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/numberWei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView7"
            android:layout_alignRight="@+id/textView7"
            android:text="@string/task_weizhi"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/add_task_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberWei"
            android:layout_alignBottom="@+id/numberWei"
            android:layout_toLeftOf="@+id/numberWei"
            android:textColor="@color/task_finish_yellow" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView7"
            android:layout_toLeftOf="@+id/add_task_person"
            android:text="@string/task_have"
            android:textColor="@color/white" />

    </RelativeLayout>

    <TextView
        android:id="@+id/brief_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/home_butttom_title" />

    <TextView
        android:id="@+id/brief_task_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/home_window_subtitle" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@color/home_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/task_brief_text"
            android:textColor="@color/home_window_subtitle" />
    </LinearLayout>

</LinearLayout>